_sass/_resume.scss
.page-resume {
  grid-template-rows: 5rem auto;

  > header > div > p {
    display: none;
  }

  .section, .subsection {
    margin: 1em 0 1.5em;
    padding: 0 1rem;
  }

  .section:first-of-type,
  .section .subsection:first-of-type {
    margin-top: 0;
  }
  .section {
    &__heading {
      color: $header-fg;
      font-family: 'Russo One', sans-serif;
      font-weight: normal;
      margin: 0 -1rem;
      padding: .5ex 1rem;
      text-shadow: $header-shadow;

      &--old {
        font-size: 1.15em;

        .subsection__header {
          background: transparent;
          padding-bottom: 0;
        }
      }
    }

    &--contact {
      background: $section-bg;
      margin-bottom: 0;
      padding: 1rem;
    }
  }
  .subsection {
    margin-left: -1rem;
    margin-right: -1rem;

    &__header {
      margin: 0 -1rem;
      padding: 1ex 1rem;
      background: $section-bg;

      .subsection__heading {
        float: left;
        max-width: 60%;
      }
      .date-range {
        float: right;
      }
    }
    &__heading {
      margin: 0;
    }
    &__subheading {
      clear: both;
      font-family: Times New Roman, serif;
      font-style: italic;
      margin: 0;
      padding-top: 1ex;
    }

    &--old {
      font-size: .7em;

      .subsection__header {
        background: transparent;
        padding-bottom: 0;
      }
    }
  }

  .contact-list {
    display: flex;
    flex-flow: row wrap;
    margin: 0;

    li {
      flex-basis: 50%;
      padding: 0;

      &::before {
        display: none;
      }
      &:nth-child(4n-3), &:nth-child(4n-2) {
        margin-bottom: 2ex;
      }
    }
    svg {
      height: 1em;
      vertical-align: middle;
      width: 1em;

      &.icon-linkedin {
        vertical-align: text-top;
      }
    }
  }

  .date-range {
    display: block;
    font-size: .9em;
    line-height: 1.55em;
    margin: 0;

    &__ordinal {
      display: none;
    }
    &__date {
      display: inline;

      &:first-of-type::after {
        content: '-';
      }
    }
  }

  .inline-list {
    font-size: .9em;
    margin: 0;
    padding: 1ex 0 0;

    &__item {
      display: inline;
      padding: 0;

      &::before {
        display: none;
      }
      &:not(:last-of-type)::after {
        content: ',';
      }
    }
  }

  .highlights {
    margin: 0;
  }
}

@media print, (min-width: 1024px) {
  .page-resume {
    grid-template-rows: 10rem auto;

    .print-grid-row {
      display: grid;
      grid: auto / 17em auto;
      grid-column-gap: 1em;
    }

    .section {
      margin: 0;

      &--contact, &--skills {
        padding-left: 2rem;

        .subsection {
          margin-left: -2rem;
          margin-right: 0;
          padding-left: 2rem;
        }
      }
      &--contact {
        grid-column: 1;
      }
      &--summary {
        align-self: center;
        grid-column: 2;
        padding-right: 2rem;
      }
      &--skills {
        background: $section-bg;
        grid-column: 1;

        .subsection {
          &:first-of-type {
            margin-top: 1ex;
          }

          &:not(.subsection--software-design) .inline-list {
            display: flex;
            flex-flow: row wrap;
          }
        }
      }
      &--experience {
        grid-column: 2;
        padding: 0;

        .section__heading {
          margin: 0;
        }
        .subsection {
          padding-right: 2rem;
          margin-left: 0;
          margin-right: 0;

          &__header {
            margin-right: -2rem;
            padding-right: 2rem;
          }
        }
      }
    }

    .contact-list {
      li {
        flex-basis: 100%;

        &:nth-child(n) {
          margin-bottom: 1ex;
        }
        &:last-of-type {
          margin: 0;
        }
      }
    }

    .inline-list {
      &__item {
        display: list-item;
        flex-basis: 50%;
        padding-left: 1em;

        &::before {
          display: block;
        }
        &::after {
          display: none;
        }
      }
    }
  }
}

@media print {
  .page-resume {
    .print-grid-row {
      grid: auto / 23em auto;
    }

    .section.section {
      &--contact, &--skills {
        padding-left: .75in;
      }
      &--summary {
        padding-right: .75in;
      }
      &--experience {
        margin-bottom: .5in;

        .subsection {
          padding-right: .75in;
        }
        .subsection__header {
          margin-right: -.75in;
          padding-right: .75in;
        }
      }

      .section__heading--old {
        margin-top: .5in;
        page-break-before: always;
      }
    }
    .subsection {
      break-inside: avoid;

      &--old {
        margin: 0;
      }
    }
  }
}

